--- a/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.5 The DNA of Waste.md
+++ b/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.5 The DNA of Waste.md
@@ -1,66 +1,70 @@
-### 模块标题: Week 2: Flow Management and Lean Operations  
-#### 第二章: Lean Operations  
-##### 视频小节1: The DNA of Waste  
+## Coursera 商业基础课程《运营管理导论》 - 模块2 - 流程管理和精益运营
+
+### 课程2.5 浪费的基因
+
+通过**医院MRI检查流程**的真实案例，揭示了精益运营中**浪费的本质与识别方法**，结合泰勒（Frederick Taylor）与大野耐一（Taiichi Ohno）的管理思想，提出了从**客户价值**与**资源效率**双视角分析浪费的框架。
+
+#### 1. 浪费的本质与类型
+
+- **定义**：任何未直接为客户创造价值的活动或资源消耗均属于浪费。  
+- **典型案例分析**：  
+  - **MRI检查流程**：患者总耗时2小时15分钟，但实际医疗操作仅20分钟，**95%的时间浪费在等待、重复登记、无效空间占用**（如候诊室、更衣室）。  
+  - **医院空间浪费**：昂贵设备（如MRI机房）因患者等待导致利用率低下，而候诊区、走廊等非增值空间占用大量成本。  
+- **浪费的隐蔽性**：  
+  - 泰勒指出：「人的低效动作不会留下可见痕迹」，如医院前台重复确认信息、患者等待未纳入系统记录。  
+  - 大野耐一强调：「移动不等于工作」，资源闲置（如设备停机）是隐性浪费的典型。
+
+#### 2. 双视角分析框架
+
+##### 2.1 客户价值视角（Ohno时间线分析）
+
+- **核心指标**：从客户触发需求到需求满足的总时间（Total Lead Time）。  
+  - 案例中患者总耗时135分钟，仅20分钟用于医疗操作，其余为**非增值时间**。  
+- **改进方向**：压缩客户接触点之间的等待，例如通过数字化预约系统减少登记环节，或整合检查与更衣流程。  
+
+##### 2.2 资源效率视角（泰勒科学管理）  
+
+- **核心指标**：资源利用率（如设备OEE）、劳动力效能。  
+  - 医院MRI设备因患者等待导致实际利用率低于30%，而候诊区占用高成本空间却无增值贡献。  
+- **改进方向**：  
+  - **动态调度**：优化患者流与设备使用匹配（如错峰检查）。  
+  - **空间重构**：将候诊区改为多功能区域，减少非增值空间占比。
+
+#### 3. 浪费识别的系统性方法
+
+- **价值流映射（Value Stream Mapping）**：  
+  - 绘制从患者入院到出院的完整流程，标注各环节时间与资源消耗，识别冗余步骤（如重复登记）。  
+- **定量工具**：  
+  - **OEE（设备综合效率）**：衡量设备可用性、性能与质量，暴露停机与低效问题（案例中MRI设备OEE不足30%）。  
+  - **%-VAT（增值时间占比）**：计算增值活动时间占总流程时间的比例（案例中仅15%）。  
+- **行为观察**：通过现场记录员工动作（如泰勒的「科学观察法」），发现非标准化操作导致的效率损失。
+
+#### 4. 改进策略与精益原则
+
+- **消除七种浪费**：  
+  - 过度生产、等待、运输、库存、过度加工、缺陷、不必要的移动。  
+  - 案例中医院存在**等待**（患者候诊）、**运输**（多次转移患者）、**库存**（积压待检患者）三种主要浪费。  
+- **拉动式生产（Pull System）**：  
+  - 根据实时需求触发流程（如患者到达后立即引导至检查室），避免提前占用资源。  
+- **标准化与持续改进**：  
+  - 制定标准化操作程序（如统一登记与更衣流程），并通过PDCA循环优化。
 
 ---
 
-### 核心概念与理论框架  
-1. **浪费的本质（DNA of Waste）**  
-   • **定义**：任何不直接为最终产品或服务增值的活动或资源消耗。  
-   • **表现形式**：等待时间、冗余步骤、空间浪费、重复劳动等（如医院MRI流程中的多次登记和等待）。  
-   • **关键启示**：浪费往往“无形”（如患者等待时间、员工低效动作），需通过系统性观察和分析揭示。  
+#### 关键结论与行动指南
 
-2. **泰勒（Frederick Taylor）的科学管理理论**  
-   • **核心思想**：通过科学测量和标准化流程消除浪费，提升效率。  
-   • **经典观点**：  
-     ◦ “浪费的动作不会留下可见痕迹，但会侵蚀效率。”  
-     ◦ 管理需基于系统化数据，而非模糊经验或随意观察。  
-   • **争议**：泰勒主义（Taylorism）因忽视人的主观能动性被批评，但其量化分析思想仍是精益运营的基础。  
+1. **双视角诊断**：同时关注客户体验（时间线）与资源效率（利用率），避免单一优化导致系统失衡。  
+2. **数据驱动决策**：使用OEE、%-VAT等工具量化浪费，而非依赖经验判断。  
+3. **空间与流程重构**：将非增值空间（如候诊区）转化为多功能区域，或通过数字化减少物理接触点。  
+4. **文化变革**：培养员工对浪费的敏感性，鼓励一线人员提出改进建议（如丰田的「安灯系统」）。  
 
-3. **大野耐一（Taiichi Ohno）与丰田生产系统（TPS）**  
-   • **核心理念**：  
-     ◦ “移动≠工作”（如患者在医院无效移动）；  
-     ◦ **时间线分析**：从客户下单到交付的全流程中，仅极小部分时间创造价值。  
-   • **医院案例**：患者2小时15分钟的流程中，仅20分钟用于检查，其余为等待和非增值步骤。  
+通过上述方法，企业可系统性识别并消除流程中的「DNA级浪费」，实现从局部优化到全局精益的跃迁。正如大野耐一所言：「最危险的时刻，正是你认为自己已经做到精益的时候」——精益的本质是持续进化的旅程。
 
 ---
 
-### 浪费的识别与分析工具  
-4. **双重视角分析**  
-   • **流程单元视角（患者视角）**：  
-     ◦ 追踪客户从进入流程到完成的全旅程，识别时间浪费（如医院多次排队、等待）。  
-     ◦ **时间线工具**：标记增值（检查）与非增值（等待、登记）时间占比。  
-   • **资源视角（医院资源视角）**：  
-     ◦ 分析设备、空间、人力利用率（如MRI设备闲置、候诊室空间浪费）。  
-     ◦ **空间成本**：医院高价租赁的候诊区、走廊等非增值空间占用。  
+### 附录：字幕
 
-5. **精益工具的应用**  
-   • **OEE（设备综合效率）**：衡量设备利用率、性能效率与质量合格率，识别设备闲置浪费。  
-   • **%-VAT（增值时间占比）**：计算流程中增值活动的时间比例（如案例中增值时间占比≈15%）。  
-
----
-
-### 关键结论与行动建议  
-1. **浪费的普遍性与隐蔽性**  
-   • 浪费不仅存在于制造业，服务业（如医疗、餐饮）的浪费更隐蔽且成本高昂（如医院候诊室空间、患者时间）。  
-   • **洞察**：非增值步骤常被流程设计者忽视（如重复登记、冗余检查）。  
-
-2. **科学观察与数据驱动**  
-   • **泰勒的启示**：需量化分析流程（如记录每个步骤耗时），避免依赖模糊经验。  
-   • **大野耐一的启示**：以客户时间线为标尺，压缩非增值环节（如简化登记流程、减少患者移动）。  
-
-3. **资源优化方向**  
-   • **空间优化**：减少非增值空间（如缩小候诊区，增加诊疗室）；  
-   • **设备与人力优化**：提升高价值资源利用率（如MRI设备排班优化、医护人员任务分配）。  
-
-4. **文化变革与持续改进**  
-   • **员工赋能**：鼓励一线员工识别并反馈浪费（如护士提出流程改进建议）；  
-   • **客户中心化**：设计流程时优先考虑客户体验（如医院提供实时排队进度通知）。  
-
-**最终目标**：通过**系统性观察**、**双重视角分析**与**精益工具**，将浪费从“无形”转化为“可量化、可改进”的指标，实现**资源效率最大化**与**客户价值最优化**。
-
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第五课 Introduction to Operations Management 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题: Week 2: Flow Management and Lean Operations
@@ -85,3 +89,4 @@ Learning Objectives:
 字幕文本: 
 
 Welcome to the module on lean operations. The goal of this module is to help you spot waste in the processes that you analyze. Each and every process is somewhat unique we will see that there is a common pattern when we look for inefficiencies. What I want you to do in this module is really learn how to figure out the DNA of waste. The module is relatively light on math, but please don't hold this against the idea of lean. Let me also emphasize that the idea of lean operation is really present throughout all modules in this course, rather than being squeezed into the single module. As often, let me kick off this module with a personal story. Now a little while ago, I needed to get an MRI with contrast agent, which is a relatively simple radiology procedure. I got an appointment here at Penn Medicine's Radiology Department for 10:00 AM. [inaudible] I arrived at the hospital at 09:45. I arrived at the radiology, I gave them my name and they confirmed my appointment time. Then to my pleasant surprise, similar to what you see at some restaurants where you're checking in to wait for a table, the hospital gave me a little buzzer. I said to myself, that's cool, they really thought about the waiting time experience here. I took my buzzer and I sit down. To my even bigger delight about 15 minutes later at 10:05, the buzzer started buzzing. That was fast, I thought. Unfortunately, it was not my turn to be examined as scheduled with my radiology appointment. Instead, I was not allowed to really check in. I checked in at a different check-in booth at 10:10, got back and waited. Now at 10:20, also not too bad, eventually the nurse called me. I was directed to the changing room over here in this part of the hospital, I changed and I waited, was stuck in a room with a television that couldn't be turned off. Finally at 11:00, I was called by the nurse and she directed me to the imaging room. I waited in the imaging room for about another 20 minutes until the radiologist showed up. For a few minutes he explained to me what it was about to do with me. We had the procedure which took about 10 minutes, I was directed back to the changing room and instructed to wait to make sure that the images turned out alright. Then I could ultimately change back into a normal clothes, and about two hours later at 12 o'clock, I was out of there. Let me ask you this, where did you see inefficiencies during my morning as I journeyed through the hospital? We'll get back to some inefficiencies of this story later on in this module. For now, I wanted to talk about two grandmasters of operations management. Let me start with Frederick Winslow Taylor. Taylor wrote a famous book, The Principles of Scientific Management. He wrote this book well over 100 years ago. In his studies of workers, Taylor believed in careful and systematic observation. Oftentimes, he was able to obtain dramatic improvements in productivity typically to waste reduction, picking the right man and tools for the job, and setting the right incentives. Now for the better or for the worst today, the word Taylorism is unfortunately used more as a curse word. One of the reasons for Taylor's decline in popularity is that Taylor had a rather difficult relationship when it came to human beings. He was interested in their muscles, not in their brains. But please allow me to nevertheless share two quotes with you from the Principles of Scientific Management. First Taylor wrote, "We can see and feel the waste of material things, awkward, inefficient or ill directed movements of men, however, if nothing visible or tangible behind." Then the other quote I wanted to share is weird, but I really liked this one. "Employers derive their knowledge of how much of a given class of work can be done in a day from either their own experience, which has frequently grown hazy with age, from casual and unsystematic observation of the man, or at best from records." I really liked these quotes, I think they are as important now as it were 100 years ago. At the heart of this module is the idea that we need to measure the amount of work that is done by our resources and that measurement is hard. It's really hard, the datas are easily available, but the fact that it is hard shouldn't keep us from doing it. The second gentlemen I would like to quote is Taichi Ohno. Taichi Ohno was really seen as a father of the Toyota production system. Two Ohno quotes. First, Ohno wrote, "Moving is not working. The Toyota style is not to create results by working hard." Then the second quote reads, "All we're doing is we're looking at the timeline from the moment the customer gives us an order to the point we collect the cash." As I think back to my radiology experience, then we can begin with a second Ohno quote. Here's my timeline from the moment I entered the hospital to the moment I left the hospital. You can see that only a small fraction of that time had really to anything with medical imaging. I needed that day about 20 minutes of care, but I spent two hours and 15 minutes in the hospital so that was really a waste of my time. Now, maybe the hospital designs a process with the objective of maximizing hospital efficiency rather than optimizing for the patient experience. After all, hospitals are under significant amount of cost pressure. Maybe they did a good job on efficiency and not on my willingness to pay. Let's think about the hospital efficiency. How about the person who gave me the buzzer? Was that person adding value? The massive waiting room in the lobby. Was that needed for improving my patient experience? How about the personal who checked me in and confirmed my paperwork, was he or she adding value? So you see where I'm going with this? As an example of hospital resources, let's look at space. Space is really expensive for hospital operations. Hospitals are really space constraint and have to pay for expensive real estate. Since I had consulted for this hospital in prior times, I asked the management to share floor plan of the radiology unit with me. Now, let me ask you this, which space on this floor plan adds value? At the end of the day, the value is generated in the imaging room. Given that I was waiting for 20 minutes in the imaging room, that room and that expensive equipment in there were clearly not running at a high level of utilization. Now given that patients don't spend 20 minutes in the department, but over two hours, we have to put these patients somewhere, and were the patients sitting around? Exactly, their inventory. Inventory of patients require space and what do you need when you have elderly man like me sit around waiting for an hour, especially when you think of a water fountain nearby? Let's not go there. As you can see from this example, the hospitals that are really short in space, but they're really primarily consists out of lobbies, waiting rooms, rest rooms, utility rooms and so on. All of this space exists for a good reason don't get me wrong. But most of the space doesn't add value to the patient. This gets me back to my process analysis module. Remember how I introduced two perspectives to the process in an operation. We can take the floor units perspective in the case that would be the patient and look for where the patient wasted time. This was really the idea of Ohno talking about the timeline. We can also take the perspective of the resource, that is the employees of real estate, the imaging machine that is a much more Tayloristic perspective. The waste of my time or the waste of the time of the resources here, note that none of this really has left a record behind. This is why I like the Taylor quote so much, awkward, inefficient or ill-directed movements of men, they've nothing visible or tangible behind. One of the key things we need to do in this module is to learn how to carefully observe how work is done. See you in the next video.
+```
